change build from react to vite

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "http://a4lamber.github.io/datawithadam",
+  "homepage": "https://a4lamber.github.io/adam_portfolio",
   "name": "3d_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
