change name of homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://a4lamber.github.io/adam_portfolio",
-  "name": "3d_portfolio",
+  "homepage": "https://a4lamber.github.io/",
+  "name": "adam_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
