--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://a4lamber.github.io/",
+  "homepage": "https://a4lamber.github.io/adam_portfolio",
   "name": "adam_portfolio",
   "private": true,
   "version": "0.0.0",
